<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conflictRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.App.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationContentDescription="@string/cd_navigate_up"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:title="@string/conflict_history_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conflictList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="@dimen/page_margin"
            android:paddingTop="@dimen/spacing_sm"
            android:paddingEnd="@dimen/page_margin"
            android:paddingBottom="@dimen/spacing_xxl" />

    </LinearLayout>

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/conflict_history_empty"
        android:textAppearance="@style/TextAppearance.App.Secondary" />

</FrameLayout>
